--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,10 @@
 version: "3.9"
 
 services:
-  db:
-    image: postgres:15
-    container_name: postgres_gastos
-    restart: always
-    environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-
   api:
     build: .
     container_name: api_gastos
     restart: always
-    depends_on:
-      - db
     env_file:
       - .env
     ports:
@@ -31,6 +16,9 @@ services:
       --host 0.0.0.0
       --port 8000
       --reload
+    networks:
+      - gastos-net
 
-volumes:
-  postgres_data:
+networks:
+  gastos-net:
+    external: true
